# keda-python-poc

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  Taskfile.yml  api.py  pyproject.toml  req.http  worker.py
.github/workflows/: main.yml
deploy/: api-deployment.yaml  api-service.yaml  kustomization.yml  ns.yaml  scale-object.yaml  worker-deployment.yaml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/charts/common/: values.yaml
deploy/helm/charts/common/templates/: deployment.yaml
deploy/helm/templates/: NOTES.txt  scale-object.yaml
deploy/kustomize/: api-deployment.yaml  kustomization.yml  scale-object.yaml  scaler-deployment.yaml  scaler-service.yaml  worker-deployment.yaml
deploy/metrics-server/: Chart.yaml  values.yaml
deploy/prometheus/: values.yaml
src/api/: main.py
src/custom_scaler/: custom_scaler.py  externalscaler_pb2.py  grpc_server.py  test_custom_scaler.py
